# TIP-kr4

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
